--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kistucsok",
   "version": "0.1.0",
-  "homepage": "https://nellieva.github.io/kistucsok",
+  // "homepage": "https://nellieva.github.io/kistucsok",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -15,8 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    // "predeploy": "npm run build",
+    // "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
