--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kistucsok",
   "version": "0.1.0",
+  "homepage": "https://sunny-chimera-dc1578.netlify.app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
